Fixed font offset and text wrapping problem

--- a/src/newtab/newtab.css
+++ b/src/newtab/newtab.css
@@ -1,12 +1,12 @@
 @font-face {
     font-family: 'Minecraftia';
-    src: url('../fonts/Minecraftia-Regular.ttf');
+    src: url('../fonts/Minecraftia.ttf');
 }
 
 * {
     margin: 0;
     padding: 0;
-    line-height: 0;
+    line-height: 1.2em;
     letter-spacing: 0.04em;
 }
 
@@ -40,18 +40,14 @@ body {
     display: inline-block;
     font-size: 3.5em;
     background-color: rgba(0, 0, 0, 0.6);
-    padding: 0 0.25em;
-    padding-top: 1.25em;
-    padding-bottom: 0.5em;
+    padding: 0.35em 0.25em;
 }
 
 #conditions {
     display: inline-block;
     font-size: 2.5em;
     background-color: rgba(0, 0, 0, 0.6);
-    padding: 0 0.25em;
-    padding-top: 1.25em;
-    padding-bottom: 0.5em;
+    padding: 0.35em 0.25em;
 }
 
 #attribution {
@@ -62,9 +58,7 @@ body {
     font-size: 1em;
     color: rgba(255, 255, 255, 0.4);
     background-color: rgba(0, 0, 0, 0.2);
-    padding: 0 0.25em;
-    padding-top: 1.25em;
-    padding-bottom: 0.5em;
+    padding: 0.35em 0.25em;
 }
 
 #last-updated {
@@ -128,7 +122,5 @@ body {
 
 #help p {
     margin-bottom: 1em;
-    padding: 0 0.25em;
-    padding-top: 1.25em;
-    padding-bottom: 0.5em;
+    padding: 0.35em 0.25em;
 }
